--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.geotag"
+    package="com.sundowner"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -18,7 +18,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.geotag.MainActivity"
+            android:name="com.sundowner.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,15 +27,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.geotag.ComposeActivity"
+            android:name="com.sundowner.ComposeActivity"
             android:label="@string/title_activity_compose"
             android:windowSoftInputMode="stateVisible"
-            android:parentActivityName="com.example.geotag.MainActivity">
+            android:parentActivityName="com.sundowner.MainActivity">
         </activity>
         <activity
-            android:name="com.example.geotag.SettingsActivity"
+            android:name="com.sundowner.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:parentActivityName="com.example.geotag.MainActivity">
+            android:parentActivityName="com.sundowner.MainActivity">
         </activity>
     </application>
 
