auto refreshing location data

--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -17,8 +17,12 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <service
+            android:name=".util.LocationService"
+            android:exported="false"
+            />
         <activity
-            android:name="com.sundowner.MainActivity"
+            android:name=".ReadActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
