--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -11,36 +11,48 @@
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="16" />
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/app_id"
+            />
         <service
             android:name=".util.LocationService"
             android:exported="false"
             />
+
         <activity
-            android:name=".ReadActivity"
-            android:label="@string/app_name" >
+            android:name=".LoggedOutActivity"
+            android:theme="@style/IntroTheme"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
+            android:name=".ReadActivity"
+            android:theme="@style/ReadTheme"
+            android:label="@string/app_name"
+            />
+        <activity
             android:name="com.sundowner.ComposeActivity"
+            android:theme="@style/WriteTheme"
             android:label="@string/title_activity_compose"
             android:windowSoftInputMode="stateVisible"
-            android:parentActivityName="com.sundowner.MainActivity">
-        </activity>
+            android:parentActivityName="com.sundowner.ReadActivity"
+            />
         <activity
             android:name="com.sundowner.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:parentActivityName="com.sundowner.MainActivity">
-        </activity>
+            />
+        <activity android:name="com.facebook.LoginActivity"/>
+
     </application>
 
 </manifest>
