--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sundowner"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionCode="2"
+    android:versionName="1.0.1">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -12,6 +12,7 @@
         android:minSdkVersion="11"
         android:targetSdkVersion="16" />
     <application
+        android:debuggable="false"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -23,7 +24,7 @@
             />
         <meta-data
             android:name="com.sundowner.ServerHost"
-            android:value="dev.api.soaptag.org"
+            android:value="api.soaptag.org"
             />
 
         <service
